--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@next/env": "^14.2.3",
-    "@vercel/postgres": "^0.8.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
+    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
