--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/env": "^14.2.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "geojson": "^0.5.0",
     "next": "14.2.3",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
