--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@next/env": "^14.2.3",
+    "@types/mapbox-gl": "^3.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "geojson": "^0.5.0",
+    "mapbox-gl": "^3.3.0",
     "next": "14.2.3",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
