--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^14.2.3",
+    "@tanstack/react-query": "^5.37.1",
     "@types/mapbox-gl": "^3.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
