--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "drizzle-kit": "^0.21.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
