--- a/package.json
+++ b/package.json
@@ -19,12 +19,8 @@
     "@next/env": "^14.2.3",
     "@tanstack/react-query": "^5.37.1",
     "@types/mapbox-gl": "^3.1.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
-    "geojson": "^0.5.0",
     "mapbox-gl": "^3.3.0",
     "next": "14.2.3",
-    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.7",
@@ -40,6 +36,10 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "stylelint": "^16.6.1",
+    "stylelint-config-clean-order": "^6.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
