--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-map-gl": "^7.1.7",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
