--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@next/env": "^14.2.3",
     "@tanstack/react-query": "^5.37.1",
     "@types/mapbox-gl": "^3.1.0",
+    "luxon": "^3.5.0",
     "mapbox-gl": "^3.3.0",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
     "react-hot-toast": "^2.4.1",
     "react-map-gl": "^7.1.7",
     "react-slick": "^0.30.2",
